<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pg_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".login_system.Register">

    <ImageView
        android:layout_width="126dp"
        android:layout_height="82dp"
        android:contentDescription="@string/logo"
        android:gravity="center"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!--first name input-->
    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!--last name input-->
    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!--email register button-->
    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <!-- Dropdown for call code -->
        <Spinner
            android:id="@+id/spinner_phone_codes"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:spinnerMode="dropdown" />

        <!-- Phone register field -->
        <EditText
            android:id="@+id/reg_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!--password button-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--password button-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Send OTP Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        android:textAllCaps="false"
        app:backgroundTint="#284A63" />

    <!-- OTP Input Field (Initially Hidden) -->
    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_otp"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!-- Verify OTP Button (Initially Hidden) -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp"
        android:textAllCaps="false"
        android:visibility="gone"
        app:backgroundTint="@color/dark_blue" />

    <!-- Register Button (Initially Disabled) -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark_blue" />

    <!-- Back to login -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark_blue" />

</LinearLayout>