<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".login_system.ForgetPassword">

    <ImageView
        android:layout_width="126dp"
        android:layout_height="82dp"
        android:contentDescription="@string/logo"
        android:gravity="center"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/forgot_password_title"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Email Input Field -->
    <EditText
        android:id="@+id/email_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/email_reset"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp" />

    <!-- Send Reset link Button -->
    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_blue"
        android:padding="12dp"
        android:text="@string/send_reset_link"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_reset" />

</LinearLayout>