<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <!-- Title TextView -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/new_member"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Cancel Button -->
        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cancel"
            android:src="@drawable/baseline_cancel_24" />
    </LinearLayout>

    <!-- Scrollable Container -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="30dp"
        android:fillViewport="true"
        android:overScrollMode="always"
        tools:ignore="NotSibling">

        <LinearLayout
            android:id="@+id/nicknameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <!-- Default Nickname Label -->
            <TextView
                android:id="@+id/nicknameLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/nickname1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <!-- Default Nickname Field -->
            <EditText
                android:id="@+id/nicknameField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="10dp"
                android:paddingBottom="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


    <!-- Add Another Member Button -->
    <Button
        android:id="@+id/addAnotherMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollView"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/baseline_add_circle_24"
        android:drawablePadding="8dp"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        android:text="@string/add_another_member"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <!-- Done Button -->
    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addAnotherMemberButton"
        android:layout_margin="16dp"
        android:backgroundTint="@color/grey_500"
        android:padding="12dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="6dp" />
</RelativeLayout>
