<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- LinearLayout to hold title and cancel button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:weightSum="1">

        <!-- Title TextView -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/friends"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Cancel Button -->
        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cancel"
            android:src="@drawable/baseline_cancel_24" />

    </LinearLayout>

    <!-- Layout for friends list -->
    <LinearLayout
        android:id="@+id/friendsListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        tools:ignore="NotSibling" />

    <!-- Add Friends to Group Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addFriendsToGroupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_blue"
        android:padding="12dp"
        android:text="@string/add_friends_to_group"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:cornerRadius="8dp" />
</RelativeLayout>
